--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
             <div class="star"></div>
             <div class="star"></div>
         </div>
+        <div class="comets">
+            <div class="comet"></div>
+            <div class="comet"></div>
+            <div class="comet"></div>
+        </div>
     </div>
 </body>
 
