--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             <div class="comet"></div>
             <div class="comet"></div>
             <div class="comet"></div>
+            <div class="reverseComet"></div>
         </div>
     </div>
 </body>
