--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             <div class="comet"></div>
             <div class="reverseComet"></div>
         </div>
+        <div class="clouds">
+            <div class="cloud"></div>
+            <div class="cloud"></div>
+        </div>
     </div>
 </body>
 
